--- a/app.ipynb
+++ b/app.ipynb
@@ -7,7 +7,6 @@
         "import json\n",
         "import os\n",
         "\n",
-        "\n",
         "import gradio as gr\n",
         "from ExamplesUtil.CelebPromptGenerator import *\n",
         "from MongoUtil.StateDataClient import *\n",
@@ -17,9 +16,12 @@
         "\n",
         "    \n",
         "#from dotenv import load_dotenv\n",
+        "\n",
         "#load_dotenv()\n",
         "\n",
         "TITLE = '# [Ask-me-to-picturize-it](https://github.com/amitpuri/Ask-me-to-picturize-it)'\n",
+        "\n",
+        "\n",
         "\n",
         "DESCRIPTION = \"\"\"<strong>This space uses following:</strong>\n",
         "   <p>\n",
@@ -27,13 +29,18 @@
         "   <li>OpenAI API Whisper(whisper-1) <a href='https://openai.com/research/whisper'>https://openai.com/research/whisper</a></li>\n",
         "   <li>DALL-E <a href='https://openai.com/product/dall-e-2'>https://openai.com/product/dall-e-2</a></li>\n",
         "   <li>GPT(gpt-3.5-turbo) <a href='https://openai.com/product/gpt-4'>https://openai.com/product/gpt-4</a></li>\n",
+        "\n",
         "   <li>Cloudinary <a href='https://cloudinary.com/documentation/python_quickstart'>https://cloudinary.com/documentation/python_quickstart</a></li>\n",
         "   <li>Gradio App <a href='https://gradio.app/docs'>https://gradio.app/docs</a> in Python and MongoDB</li>\n",
+        "   <li>Uses Prompt optimizer <a href='https://huggingface.co/microsoft/Promptist'>https://huggingface.co/microsoft/Promptist</a></li>\n",
+        "   <li>Uses stabilityai/stable-diffusion-2-1 <a href='https://huggingface.co/stabilityai/stable-diffusion-2-1'>https://huggingface.co/stabilityai/stable-diffusion-2-1</a></li>\n",
+        "   <li>Uses Stability AI <a href='https://stability.ai'>https://stability.ai</a></li>\n",
         "   </ul>\n",
         "   </p>\n",
         " \"\"\"\n",
         "RESEARCH_SECTION = \"\"\"\n",
         "   <p><strong>Research papers to read</strong>\n",
+        "\n",
         "   </p>\n",
         "   <p>\n",
         "   <ul>\n",
@@ -79,6 +86,9 @@
         "AWESOME_CHATGPT_PROMPTS = \"\"\"\n",
         "Credits \ud83e\udde0 Awesome ChatGPT Prompts <a href='https://github.com/f/awesome-chatgpt-prompts'>https://github.com/f/awesome-chatgpt-prompts</a>\n",
         "\"\"\"\n",
+        "\n",
+        "\n",
+        "PRODUCT_DEFINITION = \"<p>Define a product by prompt, picturize it, get variations, save it with a keyword for later retrieval. Credits <a href='https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers'>https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers</a></p>\"\n",
         "\n",
         "LABEL_GPT_CELEB_SCREEN = \"Name, Describe, Preview and Upload\"\n",
         "\n",
@@ -165,6 +175,7 @@
         "\n",
         "question_prompts = prompt_generator.get_questions()\n",
         "\n",
+        "\n",
         "def describe_handler(api_key, org_id, cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, cloudinary_folder, mongo_config, mongo_connection_string, mongo_database, name_it, question_prompt, input_celeb_real_picture, input_celeb_generated_picture):\n",
         "    uihandlers = AskMeUIHandlers()\n",
         "    uihandlers.set_openai_config(api_key, org_id)\n",
@@ -214,9 +225,9 @@
         "Awesome ChatGPT Prompts\n",
         "'''\n",
         "\n",
-        "def get_awesome_chatgpt_prompts(awesome_chatgpt_prompt):\n",
+        "def get_awesome_chatgpt_prompts(awesome_chatgpt_act):\n",
         "    prompt_generator = CelebPromptGenerator()\n",
-        "    awesome_chatgpt_act = prompt_generator.get_awesome_chatgpt_prompt(awesome_chatgpt_prompt)\n",
+        "    awesome_chatgpt_prompt = prompt_generator.get_awesome_chatgpt_prompt(awesome_chatgpt_act)\n",
         "    return awesome_chatgpt_act, awesome_chatgpt_prompt\n",
         "\n",
         "awesome_chatgpt_prompts = prompt_generator.get_all_awesome_chatgpt_prompts()\n",
@@ -237,13 +248,36 @@
         "    saved_products = state_data_client.list_saved_prompts(\"product\")\n",
         "    return saved_products\n",
         "\n",
-        "saved_products = get_keyword_products()\n",
+        "saved_products =  prompt_generator.get_all_awesome_chatgpt_prompts(\"product\")\n",
         "\n",
         "def ask_product_def_handler(api_key, org_id, mongo_config, mongo_connection_string, mongo_database, prompt, keyword):\n",
         "    uihandlers = AskMeUIHandlers()\n",
         "    uihandlers.set_mongodb_config(mongo_config, mongo_connection_string, mongo_database)\n",
         "    uihandlers.set_openai_config(api_key, org_id)\n",
         "    return uihandlers.ask_chatgpt(prompt, keyword,\"product\")\n",
+        "\n",
+        "\n",
+        "def update_final_prompt(product_fact_sheet, product_def_question, product_task_explanation):\n",
+        "    return f\"\"\"{product_task_explanation}\n",
+        "\n",
+        "{product_def_question}\n",
+        "           \n",
+        "Technical specifications: \n",
+        "\n",
+        "{product_fact_sheet}\n",
+        "\"\"\"\n",
+        "\n",
+        "task_explanation_examples = [\"\"\"Your task is to help a marketing team create a description for a retail website of a product based on a technical fact sheet.\n",
+        "           \n",
+        "Write a product description based on the information provided in the technical specifications delimited by triple backticks.\"\"\"\n",
+        "    ]\n",
+        "\n",
+        "product_def_question_examples = [\"Limit answer to 50 words\", \n",
+        "                             \"Limit answer to 100 words\", \n",
+        "                             \"Limit answer to 150 words\", \n",
+        "                             \"Limit answer to 200 words\", \n",
+        "                             \"Limit answer to 250 words\",\n",
+        "                             \"Limit answer to 300 words\"]\n",
         "\n",
         "\n",
         "'''\n",
@@ -460,34 +494,62 @@
         "                    fn=get_awesome_chatgpt_prompts,\n",
         "                    examples=awesome_chatgpt_prompts,\n",
         "                    examples_per_page=50,\n",
-        "                    inputs=[awesome_chatgpt_prompt],\n",
-        "                    outputs=[awesome_chatgpt_act, awesome_chatgpt_prompt],   \n",
+        "                    inputs=[awesome_chatgpt_act],\n",
+        "                    outputs=[awesome_chatgpt_act, awesome_chatgpt_prompt],\n",
         "                    cache_examples=True,\n",
         "                )\n",
         "    with gr.Tab(\"Product definition\"):\n",
-        "        gr.HTML(\"<p>Define a product by prompt, picturize it, get variations, save it with a keyword for later retrieval.</p>\")\n",
+        "        gr.HTML(PRODUCT_DEFINITION)\n",
         "        with gr.Row():\n",
         "            with gr.Column(scale=4):\n",
-        "                product_def_keyword = gr.Textbox(label=\"Keyword\")\n",
-        "                product_def_prompt = gr.Textbox(label=\"Prompt\", lines=5)\n",
-        "                gr.Examples(\n",
-        "                    label=\"Recent keywords\",\n",
-        "                    fn=get_awesome_chatgpt_prompts,\n",
-        "                    examples=saved_products,\n",
-        "                    examples_per_page=10,\n",
-        "                    inputs=[product_def_prompt],\n",
-        "                    outputs=[product_def_keyword,product_def_prompt],   \n",
-        "                    cache_examples=True,\n",
-        "                )    \n",
+        "                product_def_keyword = gr.Textbox(label=\"Keyword\")                \n",
         "            with gr.Column(scale=1):                \n",
-        "                with gr.Row():\n",
-        "                    product_def_info_label = gr.Label(value=\"See examples below\", label=\"Info\")\n",
-        "                    optimize_prompt_product_def_button = gr.Button(\"Optimize Prompt\")\n",
-        "                    product_def_ask_button = gr.Button(\"Ask ChatGPT\")\n",
-        "                    product_def_generate_button = gr.Button(\"Picturize it\")\n",
-        "                    product_def_variations_button = gr.Button(\"More variations\")                     \n",
-        "        product_def_generated_image = gr.Image(label=\"Preview Image\",  type=\"filepath\")\n",
-        "        product_def_response = gr.Textbox(label=\"Response\", lines=20)            \n",
+        "                with gr.Row():                    \n",
+        "                    product_def_ask_button = gr.Button(\"Ask ChatGPT\")                    \n",
+        "        with gr.Row():\n",
+        "            with gr.Column(scale=4):\n",
+        "                product_fact_sheet = gr.Textbox(label=\"Product Fact sheet\", lines=25)\n",
+        "                product_task_explanation = gr.Textbox(label=\"Task explanation\", lines=5)\n",
+        "                product_def_question = gr.Textbox(label=\"Question\", lines=5)\n",
+        "            with gr.Column(scale=1):\n",
+        "                gr.Examples(\n",
+        "                            label=\"Product Fact sheet examples\",\n",
+        "                            fn=get_awesome_chatgpt_prompts,\n",
+        "                            examples=saved_products,\n",
+        "                            examples_per_page=3,\n",
+        "                            inputs=[product_def_keyword],\n",
+        "                            outputs=[product_def_keyword,product_fact_sheet],\n",
+        "                            cache_examples=True,\n",
+        "                        )\n",
+        "                gr.Examples(\n",
+        "                    label=\"Task explanation examples\",\n",
+        "                    examples=task_explanation_examples,\n",
+        "                    examples_per_page=10,\n",
+        "                    inputs=[product_task_explanation],\n",
+        "                    outputs=[product_task_explanation],\n",
+        "                )\n",
+        "                gr.Examples(\n",
+        "                    label=\"Question examples\",\n",
+        "                    examples=product_def_question_examples,\n",
+        "                    examples_per_page=10,\n",
+        "                    inputs=[product_def_question],\n",
+        "                    outputs=[product_def_question],\n",
+        "                )\n",
+        "        with gr.Row():\n",
+        "            with gr.Column(scale=4):\n",
+        "                product_def_final_prompt = gr.Textbox(label=\"Prompt\", lines=10)\n",
+        "            with gr.Column(scale=1):                \n",
+        "                product_def_info_label = gr.Label(value=\"See examples below\", label=\"Info\")\n",
+        "        product_def_response = gr.Textbox(label=\"Response\", lines=10)\n",
+        "        with gr.Row():\n",
+        "            with gr.Column(scale=4):\n",
+        "                product_def_image_prompt = gr.Textbox(label=\"Enter Image creation Prompt\", lines=5)\n",
+        "                product_def_generated_image = gr.Image(label=\"Generated Image\",  type=\"filepath\")\n",
+        "            with gr.Column(scale=1):                \n",
+        "                optimize_prompt_product_def_button = gr.Button(\"Optimize Prompt\")\n",
+        "                product_def_generate_button = gr.Button(\"Picturize it\")\n",
+        "                product_def_variations_button = gr.Button(\"More variations\")\n",
+        "                product_def_image_info_label = gr.Label(value=\"Picturize it info\", label=\"Info\")\n",
         "    with gr.Tab(\"Output\"):\n",
         "            with gr.Row():            \n",
         "                with gr.Column(scale=4):\n",
@@ -506,10 +568,35 @@
         "    gr.HTML(FOOTER)\n",
         "\n",
         "\n",
+        "    \n",
+        "    product_def_image_prompt.change(\n",
+        "        fn=tokenizer_calc,\n",
+        "        inputs=[product_def_image_prompt],\n",
+        "        outputs=[product_def_image_info_label]        \n",
+        "    )\n",
+        "    \n",
+        "    product_fact_sheet.change(\n",
+        "        fn=update_final_prompt,\n",
+        "        inputs=[product_fact_sheet, product_def_question, product_task_explanation],\n",
+        "        outputs=[product_def_final_prompt]        \n",
+        "    )\n",
+        "\n",
+        "    product_def_question.change(\n",
+        "        fn=update_final_prompt,\n",
+        "        inputs=[product_fact_sheet, product_def_question, product_task_explanation],\n",
+        "        outputs=[product_def_final_prompt]        \n",
+        "    )\n",
+        "\n",
+        "    product_task_explanation.change(\n",
+        "        fn=update_final_prompt,\n",
+        "        inputs=[product_fact_sheet, product_def_question, product_task_explanation],\n",
+        "        outputs=[product_def_final_prompt]        \n",
+        "    )\n",
+        "    \n",
         "    optimize_prompt_product_def_button.click(\n",
         "        generate_optimized_prompt,\n",
-        "        inputs=[product_def_prompt],\n",
-        "        outputs=[product_def_prompt]\n",
+        "        inputs=[product_def_image_prompt],\n",
+        "        outputs=[product_def_image_prompt]\n",
         "    )\n",
         "\n",
         "    ask_awesome_chatgpt_button.click(\n",
@@ -526,13 +613,14 @@
         "\n",
         "    product_def_ask_button.click(\n",
         "        ask_product_def_handler,\n",
-        "        inputs=[input_key, org_id, mongo_config, mongo_connection_string, mongo_database, product_def_prompt, product_def_keyword],\n",
+        "\n",
+        "        inputs=[input_key, org_id, mongo_config, mongo_connection_string, mongo_database, product_def_final_prompt, product_def_keyword],\n",
         "        outputs=[product_def_info_label, product_def_response]\n",
         "    )   \n",
         "    \n",
         "    product_def_generate_button.click(\n",
         "        create_image_from_prompt_handler,\n",
-        "        inputs=[input_key, org_id, product_def_response, input_imagesize, input_num_images],\n",
+        "        inputs=[input_key, org_id, product_def_image_prompt, input_imagesize, input_num_images],\n",
         "        outputs=[product_def_info_label, product_def_generated_image, generated_images_gallery]\n",
         "    )\n",
         "\n",
@@ -551,18 +639,19 @@
         "    awesome_chatgpt_prompt.change(\n",
         "        fn=tokenizer_calc,\n",
         "        inputs=[awesome_chatgpt_prompt],\n",
+        "\n",
         "        outputs=[label_awesome_chatgpt_here]        \n",
         "    )\n",
         "    \n",
-        "    product_def_prompt.change(\n",
+        "    product_def_final_prompt.change(\n",
         "        fn=tokenizer_calc,\n",
-        "        inputs=[product_def_prompt],\n",
+        "        inputs=[product_def_final_prompt],\n",
         "        outputs=[product_def_info_label]\n",
         "    )\n",
         "\n",
         "    product_def_generate_button.click(\n",
         "        create_image_from_prompt_handler,\n",
-        "        inputs=[input_key, org_id, product_def_prompt, input_imagesize, input_num_images],\n",
+        "        inputs=[input_key, org_id, product_def_final_prompt, input_imagesize, input_num_images],\n",
         "        outputs=[product_def_info_label, product_def_generated_image, generated_images_gallery]\n",
         "    )\n",
         "    \n",
