--- a/app.ipynb
+++ b/app.ipynb
@@ -60,6 +60,7 @@
         "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
         "of this software and associated documentation files (the \"Software\"), to deal\n",
         "in the Software without restriction, including without limitation the rights\n",
+        "\n",
         "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
         "copies of the Software, and to permit persons to whom the Software is\n",
         "\n",
@@ -206,12 +207,12 @@
         "    return prompt_generator.create_celeb_prompt(celebs_name_label)\n",
         "\n",
         "\n",
-        "def describe_handler(api_key, org_id, mongo_prompt_read_config, cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, cloudinary_folder, mongo_config, mongo_connection_string, mongo_database, celebs_name_label, question_prompt, input_celeb_real_picture, input_celeb_generated_picture):\n",
+        "def describe_handler(api_key, org_id, mongo_prompt_read_config, cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, cloudinary_folder, mongo_config, mongo_connection_string, mongo_database, celebs_name_label, question_prompt, know_your_celeb_description, input_celeb_real_picture, input_celeb_generated_picture):\n",
         "    uihandlers = AskMeUIHandlers()\n",
         "    uihandlers.set_openai_config(api_key, org_id, mongo_prompt_read_config)\n",
         "    uihandlers.set_mongodb_config(mongo_config, mongo_connection_string, mongo_database)\n",
         "    uihandlers.set_cloudinary_config(cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret)\n",
-        "    return uihandlers.describe_handler(celebs_name_label, question_prompt, cloudinary_folder, input_celeb_real_picture, input_celeb_generated_picture)\n",
+        "    return uihandlers.describe_handler(celebs_name_label, question_prompt, cloudinary_folder, know_your_celeb_description, input_celeb_real_picture, input_celeb_generated_picture)\n",
         "\n",
         "def celeb_upload_save_real_generated_image_handler(cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, cloudinary_folder, mongo_config, mongo_connection_string, mongo_database, celebs_name_label, question_prompt, know_your_celeb_description, celeb_real_photo, celeb_generated_image):\n",
         "    uihandlers = AskMeUIHandlers()\n",
@@ -416,7 +417,7 @@
         "\n",
         "\n",
         "\n",
-        "with gr.Blocks(css='styles.css') as AskMeTabbedScreen:\n",
+        "with gr.Blocks(css='https://cdn.amitpuri.com/ask-picturize-it.css') as AskMeTabbedScreen:\n",
         "    gr.Markdown(TITLE)\n",
         "    with gr.Tab(\"Information\"):\n",
         "        gr.HTML(DESCRIPTION)\n",
@@ -456,7 +457,6 @@
         "                    cloudinary_api_secret = gr.Textbox(\n",
         "                        label=\"Cloudinary API Secret\", value=os.getenv(\"CLOUDINARY_API_SECRET\"), type=\"password\")\n",
         "        with gr.Tab(\"Stability API\"):\n",
-        "\n",
         "            gr.HTML(\"Sign up here <a href='https://platform.stability.ai'>https://platform.stability.ai</a>\")\n",
         "            with gr.Row():\n",
         "                with gr.Column():\n",
@@ -531,7 +531,7 @@
         "                            fn=create_celeb_prompt,\n",
         "                            label=\"Select one from a celebrity\",\n",
         "                            examples=celeb_names,\n",
-        "                            examples_per_page=70,\n",
+        "                            examples_per_page=100,\n",
         "                            inputs=[celebs_name_label],\n",
         "                            outputs=[question_prompt],                \n",
         "                            cache_examples=True,\n",
@@ -748,7 +748,6 @@
         "    )\n",
         "\n",
         "    product_def_question.change(\n",
-        "\n",
         "        fn=update_final_prompt,\n",
         "        inputs=[product_fact_sheet, product_def_question, product_task_explanation],\n",
         "        outputs=[product_def_final_prompt]        \n",
@@ -787,14 +786,14 @@
         "    product_def_generate_button.click(\n",
         "        create_image_from_prompt_handler,\n",
         "        inputs=[input_key, org_id, product_def_image_prompt, input_imagesize, input_num_images],\n",
-        "        outputs=[product_def_info_label, product_def_generated_image, generated_images_gallery]\n",
+        "        outputs=[product_def_image_info_label, product_def_generated_image, generated_images_gallery]\n",
         "\n",
         "    )\n",
         "\n",
         "    product_def_variations_button.click(\n",
         "        create_variation_from_image_handler,\n",
         "        inputs=[input_key, org_id, product_def_generated_image, input_imagesize, input_num_images],\n",
-        "        outputs=[product_def_info_label, product_def_generated_image, generated_images_gallery]\n",
+        "        outputs=[product_def_image_info_label, product_def_generated_image, generated_images_gallery]\n",
         "    )\n",
         "\n",
         "    question_prompt.change(\n",
@@ -851,7 +850,7 @@
         "\n",
         "    describe_button.click(\n",
         "        describe_handler,\n",
-        "        inputs=[input_key, org_id, mongo_prompt_read_config, cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, cloudinary_folder, mongo_config, mongo_connection_string, mongo_database, celebs_name_label, question_prompt, celeb_real_photo,  celeb_generated_image],\n",
+        "        inputs=[input_key, org_id, mongo_prompt_read_config, cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, cloudinary_folder, mongo_config, mongo_connection_string, mongo_database, celebs_name_label, question_prompt, know_your_celeb_description, celeb_real_photo,  celeb_generated_image],\n",
         "        outputs=[label_upload_here, celebs_name_label, question_prompt, know_your_celeb_description, celeb_real_photo, celeb_generated_image]\n",
         "    )\n",
         "\n",
