--- a/app.ipynb
+++ b/app.ipynb
@@ -13,6 +13,7 @@
         "import gradio as gr\n",
         "from ExamplesUtil.CelebPromptGenerator import *\n",
         "from MongoUtil.StateDataClient import *\n",
+        "from MongoUtil.CelebDataClient import *\n",
         "from UIHandlers import AskMeUIHandlers\n",
         "from Utils.Optimizers import Prompt_Optimizer\n",
         "\n",
@@ -202,10 +203,6 @@
         "Know your Celebrity\n",
         "'''\n",
         "\n",
-        "def create_celeb_prompt(celebs_name_label):\n",
-        "    prompt_generator = CelebPromptGenerator()\n",
-        "    return prompt_generator.create_celeb_prompt(celebs_name_label)\n",
-        "\n",
         "\n",
         "def describe_handler(api_key, org_id, mongo_prompt_read_config, cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, cloudinary_folder, mongo_config, mongo_connection_string, mongo_database, celebs_name_label, question_prompt, know_your_celeb_description, input_celeb_real_picture, input_celeb_generated_picture):\n",
         "    uihandlers = AskMeUIHandlers()\n",
@@ -233,12 +230,25 @@
         "    \n",
         "def get_celebs_response_change_handler(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text):\n",
         "    return get_celebs_response(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text)\n",
+        "\n",
+        "def get_internal_celeb_name(celebrity):\n",
+        "    for celeb in IndianFilm_celeb_list:\n",
+        "        if celeb[0]==celebrity:\n",
+        "            return celeb[1]\n",
+        "    for celeb in Hollywood_celeb_list:\n",
+        "        if celeb[0]==celebrity:\n",
+        "            return celeb[1]\n",
+        "    for celeb in Business_celeb_list:\n",
+        "        if celeb[0]==celebrity:\n",
+        "            return celeb[1]\n",
         "    \n",
+        "\n",
         "def get_celebs_response(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text):\n",
         "    #try:\n",
         "    uihandlers = AskMeUIHandlers()\n",
         "    uihandlers.set_mongodb_config(mongo_config, mongo_connection_string, mongo_database)\n",
-        "    wiki_summary = get_wiki_page_summary(celebrity)\n",
+        "    internal_celeb_name = get_internal_celeb_name(celebrity)\n",
+        "    wiki_summary = get_wiki_page_summary(internal_celeb_name)\n",
         "    try:\n",
         "        name, prompt, response, wiki_image, generated_image_url = uihandlers.get_celebs_response_handler(celebrity)\n",
         "        if wiki_image is None:\n",
@@ -267,6 +277,12 @@
         "        uihandlers.set_mongodb_config(mongo_config, mongo_connection_string, mongo_database)\n",
         "        uihandlers.update_description(name, prompt, description)\n",
         "        return f\"ChatGPT description saved for {name}\", description\n",
+        "\n",
+        "def get_celeb_examples(category):\n",
+        "    connection_string, database = get_private_mongo_config()           \n",
+        "    celeb_data_client = CelebDataClient(connection_string, database)\n",
+        "    celeb_list = celeb_data_client.celeb_list(category)\n",
+        "    return celeb_list\n",
         "\n",
         "\n",
         "'''\n",
@@ -369,6 +385,13 @@
         "awesome_chatgpt_prompts = prompt_generator.get_all_awesome_chatgpt_prompts()\n",
         "celeb_names = prompt_generator.get_celebs()\n",
         "question_prompts = prompt_generator.get_questions()\n",
+        "IndianFilm_celeb_list = get_celeb_examples(\"Indian Film\")\n",
+        "Hollywood_celeb_list = get_celeb_examples(\"Hollywood\")\n",
+        "Business_celeb_list = get_celeb_examples(\"Business\")\n",
+        "IndianFilm_celeb_examples = [celeb[0] for celeb in IndianFilm_celeb_list]\n",
+        "hollywood_celeb_examples = [celeb[0] for celeb in Hollywood_celeb_list]\n",
+        "business_celeb_examples = [celeb[0] for celeb in Business_celeb_list]\n",
+        "\n",
         "\n",
         "'''\n",
         "Output and Upload\n",
@@ -527,15 +550,33 @@
         "                    celebs_name_label = gr.Textbox(label=\"Celebrity\") \n",
         "                    question_prompt = gr.Textbox(label=\"Prompt\", lines=2)\n",
         "                    with gr.Accordion(\"Celebrity Examples, select one from here\", open=True):\n",
-        "                        gr.Examples(\n",
-        "                            fn=create_celeb_prompt,\n",
-        "                            label=\"Select one from a celebrity\",\n",
-        "                            examples=celeb_names,\n",
-        "                            examples_per_page=100,\n",
-        "                            inputs=[celebs_name_label],\n",
-        "                            outputs=[question_prompt],                \n",
-        "                            cache_examples=True,\n",
-        "                        )\n",
+        "                        with gr.Tab(\"Indian Film\"):\n",
+        "                            with gr.Row():\n",
+        "                                gr.Examples(\n",
+        "                                    label=\"Select one from a celebrity\",\n",
+        "                                    examples=IndianFilm_celeb_examples,\n",
+        "                                    examples_per_page=100,\n",
+        "                                    inputs=[celebs_name_label],\n",
+        "                                    outputs=[question_prompt],                \n",
+        "                                )\n",
+        "                        with gr.Tab(\"Hollywood\"):\n",
+        "                            with gr.Row():\n",
+        "                                gr.Examples(\n",
+        "                                    label=\"Select one from a celebrity\",\n",
+        "                                    examples=hollywood_celeb_examples,\n",
+        "                                    examples_per_page=100,\n",
+        "                                    inputs=[celebs_name_label],\n",
+        "                                    outputs=[question_prompt],                \n",
+        "                                )\n",
+        "                        with gr.Tab(\"Business\"):\n",
+        "                            with gr.Row():\n",
+        "                                gr.Examples(\n",
+        "                                    label=\"Select one from a celebrity\",\n",
+        "                                    examples=business_celeb_examples,\n",
+        "                                    examples_per_page=100,\n",
+        "                                    inputs=[celebs_name_label],\n",
+        "                                    outputs=[question_prompt],                \n",
+        "                                )                        \n",
         "                with gr.Column(scale=1):\n",
         "                    clear_celeb_details_button = gr.Button(\"Clear\")                \n",
         "                    generate_image_prompt_text = gr.Textbox(label=\"Image generation prompt\", value=\"A realistic photo\")\n",
@@ -562,7 +603,7 @@
         "        with gr.Tab(\"Ask GPT\"):\n",
         "            with gr.Row():\n",
         "                with gr.Column(): \n",
-        "                    keyword_search = gr.Textbox(label=\"Keyword\")                \n",
+        "                    keyword_search = gr.Textbox(label=\"Keyword\")\n",
         "                    with gr.Row():\n",
         "                        keyword_search_prompt = gr.Textbox(label=\"Prompt\")\n",
         "                        keyword_search_response = gr.Textbox(label=\"Response\")\n",
@@ -599,7 +640,7 @@
         "                                        inputs=[keyword_search],\n",
         "                                        outputs=[keyword_search_prompt, keyword_search_response],   \n",
         "                                        cache_examples=True,\n",
-        "                            )                \n",
+        "                            )\n",
         "            with gr.Tab(\"Ask Codex\"):\n",
         "                with gr.Row():\n",
         "                    with gr.Column(scale=4):\n",
