--- a/app.ipynb
+++ b/app.ipynb
@@ -106,15 +106,31 @@
         "    if keyword:\n",
         "        try:\n",
         "            result = wikipedia.search(keyword, results = 1)\n",
-        "            wikipedia.set_lang('en')\n",
-        "            wkpage = wikipedia.WikipediaPage(title = result[0])\n",
+        "        except wikipedia.exceptions.WikipediaException as exception:\n",
+        "            print(f\"Exception Name: {type(exception).__name__}\")\n",
+        "            print(exception)\n",
+        "            result = None\n",
+        "            pass\n",
+        "        wikipedia.set_lang('en')\n",
+        "        try:\n",
+        "            if result is not None:\n",
+        "                wkpage = wikipedia.WikipediaPage(title = result[0])\n",
+        "            else:\n",
+        "                wkpage = None\n",
+        "        except wikipedia.exceptions.WikipediaException as exception:\n",
+        "            print(f\"Exception Name: {type(exception).__name__}\")\n",
+        "            print(exception)\n",
+        "            wkpage = None\n",
+        "            pass\n",
+        "        if wkpage is not None:\n",
         "            title = wkpage.title\n",
         "            response  = requests.get(WIKI_REQUEST+title)\n",
         "            json_data = json.loads(response.text)\n",
-        "            image_link = list(json_data['query']['pages'].values())[0]['original']['source']\n",
-        "            return image_link\n",
-        "        except:\n",
-        "            return None\n",
+        "            try:\n",
+        "                image_link = list(json_data['query']['pages'].values())[0]['original']['source']\n",
+        "                return image_link\n",
+        "            except:\n",
+        "                return None\n",
         "\n",
         "def get_wiki_page_summary(keyword):\n",
         "    if keyword:\n",
@@ -222,14 +238,9 @@
         "    celebrity_name = f\"{celebrity}\"\n",
         "    return get_wiki_page_summary(celebrity_name),get_wikimedia_image(celebrity)\n",
         "\n",
-        "def get_celebs_response_click_handler(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text):\n",
-        "    if celebrity:\n",
-        "        return get_celebs_response(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text)\n",
-        "    else:\n",
-        "        return \"\", \"\", \"\", \"\", None, None, None\n",
         "    \n",
-        "def get_celebs_response_change_handler(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text):\n",
-        "    return get_celebs_response(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text)\n",
+        "def get_celebs_response_change_handler(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text, key_traits):\n",
+        "    return get_celebs_response(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text, key_traits)\n",
         "\n",
         "def get_internal_celeb_name(celebrity):\n",
         "    for celeb in IndianFilm_celeb_list:\n",
@@ -243,27 +254,28 @@
         "            return celeb[1]\n",
         "    \n",
         "\n",
-        "def get_celebs_response(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text):\n",
+        "def get_celebs_response(mongo_config, mongo_connection_string, mongo_database, celebrity, image_prompt_text, key_traits):\n",
         "    #try:\n",
         "    uihandlers = AskMeUIHandlers()\n",
         "    uihandlers.set_mongodb_config(mongo_config, mongo_connection_string, mongo_database)\n",
         "    internal_celeb_name = get_internal_celeb_name(celebrity)\n",
         "    wiki_summary = get_wiki_page_summary(internal_celeb_name)\n",
+        "    key_traits = get_key_traits(celebrity)\n",
         "    try:\n",
         "        name, prompt, response, wiki_image, generated_image_url = uihandlers.get_celebs_response_handler(celebrity)\n",
         "        if wiki_image is None:\n",
         "            wiki_image = get_wikimedia_image(celebrity)\n",
-        "        return name, prompt, wiki_summary, response, wiki_image, generated_image_url, f\"A realistic photo of {name}\"\n",
+        "        return name, prompt, wiki_summary, response, wiki_image, generated_image_url, f\"A realistic photo of {name}\", key_traits\n",
         "    except:\n",
         "        response = None\n",
         "        generated_image_url = None\n",
         "        wiki_image = get_wikimedia_image(celebrity)\n",
-        "        return celebrity, f\"Write a paragraph on {celebrity}\", wiki_summary, \"\", wiki_image, None, f\"A realistic photo of {celebrity}\"\n",
+        "        return celebrity, f\"Write a paragraph on {celebrity}\", wiki_summary, \"\", wiki_image, None, f\"A realistic photo of {celebrity}\", key_traits\n",
         "        pass\n",
         "    \n",
         "\n",
         "def clear_celeb_details():\n",
-        "    return \"\", \"\", \"\", \"\", None, None, None\n",
+        "    return \"\", \"\", \"\", \"\", None, None, None, None\n",
         "\n",
         "\n",
         "def celeb_summarize_handler(api_key, org_id, prompt):\n",
@@ -283,6 +295,11 @@
         "    celeb_data_client = CelebDataClient(connection_string, database)\n",
         "    celeb_list = celeb_data_client.celeb_list(category)\n",
         "    return celeb_list\n",
+        "\n",
+        "def get_key_traits(name):\n",
+        "    connection_string, database = get_private_mongo_config()\n",
+        "    celeb_data_client = CelebDataClient(connection_string, database)\n",
+        "    return celeb_data_client.get_key_traits(name)\n",
         "\n",
         "\n",
         "'''\n",
@@ -383,15 +400,12 @@
         "saved_prompts = get_keyword_prompts(\"codex\") \n",
         "saved_products =  prompt_generator.get_all_awesome_chatgpt_prompts(\"product\")\n",
         "awesome_chatgpt_prompts = prompt_generator.get_all_awesome_chatgpt_prompts()\n",
-        "celeb_names = prompt_generator.get_celebs()\n",
-        "question_prompts = prompt_generator.get_questions()\n",
         "IndianFilm_celeb_list = get_celeb_examples(\"Indian Film\")\n",
         "Hollywood_celeb_list = get_celeb_examples(\"Hollywood\")\n",
         "Business_celeb_list = get_celeb_examples(\"Business\")\n",
         "IndianFilm_celeb_examples = [celeb[0] for celeb in IndianFilm_celeb_list]\n",
         "hollywood_celeb_examples = [celeb[0] for celeb in Hollywood_celeb_list]\n",
         "business_celeb_examples = [celeb[0] for celeb in Business_celeb_list]\n",
-        "\n",
         "\n",
         "'''\n",
         "Output and Upload\n",
@@ -405,6 +419,7 @@
         "    \n",
         "def cloudinary_upload(cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret, folder_name, input_celeb_picture, celebrity_name):\n",
         "    uihandlers = AskMeUIHandlers()\n",
+        "\n",
         "    uihandlers.set_cloudinary_config(cloudinary_cloud_name, cloudinary_api_key, cloudinary_api_secret)\n",
         "    return uihandlers.cloudinary_upload(folder_name, input_celeb_picture, celebrity_name)\n",
         "\n",
@@ -463,11 +478,13 @@
         "                    mongo_config = gr.Checkbox(label=\"MongoDB config\", info=\"Use your own MongoDB\", value=os.getenv(\"USE_MONGODB_CONFIG\"))\n",
         "                    mongo_connection_string = gr.Textbox(\n",
         "                        label=\"MongoDB Connection string\", value=os.getenv(\"MONGODB_URI\"), type=\"password\")\n",
+        "\n",
         "                with gr.Column():\n",
         "                    mongo_database = gr.Textbox(\n",
         "                        label=\"MongoDB database\", value=os.getenv(\"MONGODB_DATABASE\"))\n",
         "        with gr.Tab(\"Cloudinary\"):\n",
         "            gr.HTML(\"Sign up here <a href='https://cloudinary.com'>https://cloudinary.com</a>\")\n",
+        "\n",
         "            with gr.Row():\n",
         "                with gr.Column():\n",
         "                    cloudinary_cloud_name = gr.Textbox(\n",
@@ -549,6 +566,7 @@
         "                with gr.Column(scale=4):  \n",
         "                    celebs_name_label = gr.Textbox(label=\"Celebrity\") \n",
         "                    question_prompt = gr.Textbox(label=\"Prompt\", lines=2)\n",
+        "                    key_traits = gr.Textbox(label=\"Key traits\", lines=5)\n",
         "                    with gr.Accordion(\"Celebrity Examples, select one from here\", open=True):\n",
         "                        with gr.Tab(\"Indian Film\"):\n",
         "                            with gr.Row():\n",
@@ -557,7 +575,7 @@
         "                                    examples=IndianFilm_celeb_examples,\n",
         "                                    examples_per_page=100,\n",
         "                                    inputs=[celebs_name_label],\n",
-        "                                    outputs=[question_prompt],                \n",
+        "                                    outputs=[question_prompt, key_traits],                \n",
         "                                )\n",
         "                        with gr.Tab(\"Hollywood\"):\n",
         "                            with gr.Row():\n",
@@ -566,7 +584,7 @@
         "                                    examples=hollywood_celeb_examples,\n",
         "                                    examples_per_page=100,\n",
         "                                    inputs=[celebs_name_label],\n",
-        "                                    outputs=[question_prompt],                \n",
+        "                                    outputs=[question_prompt, key_traits],                \n",
         "                                )\n",
         "                        with gr.Tab(\"Business\"):\n",
         "                            with gr.Row():\n",
@@ -575,7 +593,7 @@
         "                                    examples=business_celeb_examples,\n",
         "                                    examples_per_page=100,\n",
         "                                    inputs=[celebs_name_label],\n",
-        "                                    outputs=[question_prompt],                \n",
+        "                                    outputs=[question_prompt, key_traits],                \n",
         "                                )                        \n",
         "                with gr.Column(scale=1):\n",
         "                    clear_celeb_details_button = gr.Button(\"Clear\")                \n",
@@ -766,14 +784,14 @@
         "    clear_celeb_details_button.click(\n",
         "        clear_celeb_details,\n",
         "        inputs=[],\n",
-        "        outputs=[celebs_name_label, question_prompt, know_your_celeb_description_wiki, know_your_celeb_description, celeb_real_photo, celeb_generated_image, generate_image_prompt_text]\n",
+        "        outputs=[celebs_name_label, question_prompt, know_your_celeb_description_wiki, know_your_celeb_description, celeb_real_photo, celeb_generated_image, generate_image_prompt_text, key_traits]\n",
         "    )\n",
         "    \n",
         "\n",
         "    celebs_name_label.change(\n",
         "        fn=get_celebs_response_change_handler,\n",
-        "        inputs=[mongo_config, mongo_connection_string, mongo_database, celebs_name_label, generate_image_prompt_text],\n",
-        "        outputs=[celebs_name_label, question_prompt, know_your_celeb_description_wiki, know_your_celeb_description, celeb_real_photo, celeb_generated_image, generate_image_prompt_text]\n",
+        "        inputs=[mongo_config, mongo_connection_string, mongo_database, celebs_name_label, generate_image_prompt_text, key_traits],\n",
+        "        outputs=[celebs_name_label, question_prompt, know_your_celeb_description_wiki, know_your_celeb_description, celeb_real_photo, celeb_generated_image, generate_image_prompt_text, key_traits]\n",
         "    )\n",
         "\n",
         "    product_def_image_prompt.change(\n",
@@ -866,6 +884,7 @@
         "        fn=tokenizer_calc,\n",
         "        inputs=[input_prompt],\n",
         "        outputs=[label_picturize_it]        \n",
+        "\n",
         "    )\n",
         "    \n",
         "    ask_prompt.change(\n",
