--- a/audiocraft-demo.ipynb
+++ b/audiocraft-demo.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/amitpuri/Ask-me-to-picturize-it/blob/main/audiocraft-demo.ipynb)"
+      ],
+      "metadata": {
+        "id": "9XIqfYcrLGqu"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "jVd7AaBXFAOM"
       },
@@ -33,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "tKQJTPmkFAOT",
         "colab": {
@@ -197,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "WMtU4WBLFAOX"
       },
@@ -234,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "-vDu7qzOFAOa",
         "colab": {
@@ -302,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "S0I-gT4VFAOc"
       },
@@ -335,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "pHCW7yV7FAOe",
         "colab": {
