--- a/audiocraft-demo.ipynb
+++ b/audiocraft-demo.ipynb
@@ -324,10 +324,10 @@
         "from audiocraft.utils.notebook import display_audio\n",
         "\n",
         "def get_bip_bip(bip_duration=0.125, frequency=440,\n",
-        "                duration=0.5, sample_rate=32000, device=\"cuda\"):\n",
+        "                duration=0.5, sample_rate=32000, device=\"cuda\" if torch.cuda.is_available() else \"cpu\"):\n",
         "    \"\"\"Generates a series of bip bip at the given frequency.\"\"\"\n",
         "    t = torch.arange(\n",
-        "        int(duration * sample_rate), device=\"cuda\", dtype=torch.float) / sample_rate\n",
+        "        int(duration * sample_rate), device=\"cuda\" if torch.cuda.is_available() else \"cpu\", dtype=torch.float) / sample_rate\n",
         "    wav = torch.cos(2 * math.pi * 440 * t)[None]\n",
         "    tp = (t % (2 * bip_duration)) / (2 * bip_duration)\n",
         "    envelope = (tp >= 0.5).float()\n",
